Add workflow config for GitHub CI
Co-authored-by: h1dden-da3m0n <33120068+h1dden-da3m0n@users.noreply.github.com>

--- a/.ci/azure-pipelines.yml
+++ b/.ci/azure-pipelines.yml
@@ -1,6 +1,6 @@
 variables:
   ${{ if startsWith(variables['Build.SourceBranch'], 'refs/tags/v') }}:
-    JELLYFIN_VERSION: $[replace(variables['Build.SourceBranch'], 'refs/tags/', '')]
+    JELLYFIN_VERSION: $[replace(variables['Build.SourceBranch'], 'refs/tags/v', '')]
 
 trigger:
   batch: true
