--- a/.github/workflows/app-build.yaml
+++ b/.github/workflows/app-build.yaml
@@ -28,6 +28,9 @@ jobs:
           mv app/build/outputs/apk/*/*/jellyfin-android-*-libre-debug.apk build/jellyfin-publish/release-libre/;
           mv app/build/outputs/apk/*/*/jellyfin-android-*-proprietary-debug.apk build/jellyfin-publish/release-proprietary/;
 
+      - name: debug logging
+        run: ls -lR build/jellyfin-publish/
+
       - uses: actions/upload-artifact@v2
         with:
           name: build-artifacts
